Don't start layout for XML just because the root has been opened.  And don't start layout until <html:head> closes if <html:head> gets opened.  For XHTML documents, this should prevent flashes of unstyled content.

Also, don't flush tags unless forced to if a sheet is pending.

Bug 380028, r+sr=sicking